# BuildForge

./: .gitignore  Dockerfile  Dockerfile.secure  FINAL_FIXES_COMPLETE.md  LICENSE  OPTIMIZATION_COMPLETE.md  README.md  RELEASE_READY.md  buildforge-nodes-README.md  example-timer-node.json  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docker/: Dockerfile.linux  Dockerfile.macos  Dockerfile.windows  README-DOCKERHUB.md  README.md  build-images.sh
server/: .gitignore  Cargo.toml
server/src/: main.rs
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  commands.rs.backup  commands.rs.backup2  commands.rs.backup3  commands.rs.bak4  commands.rs.bak5  main.rs  server.rs
src/components/: BuildDialog.tsx  Dashboard.tsx  HistoryView.tsx  LoginScreen.tsx  MainLayout.tsx  NodeEditor.tsx  ProjectsView.tsx  ServersView.tsx  SettingsView.tsx  Sidebar.tsx  Titlebar.tsx
src/components/tabs/: ActionsTab.tsx  HistoryTab.tsx  MarketplaceTab.tsx  ReleasesTab.tsx  ServersTab.tsx  SettingsTab.tsx  WorkflowsTab.tsx
src/components/ui/: toaster.tsx
src/lib/: storage.ts  timerScheduler.ts  utils.ts
src/store/: appStore.ts
src/types/: marketplace.ts
