[package]
name = "buildforge-server"
version = "1.0.0"
description = "BuildForge build server agent"
authors = ["yyyumeniku"]
license = "MIT"
repository = "https://github.com/yyyumeniku/BuildForge"
edition = "2021"

[[bin]]
name = "buildforge-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "multipart"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
glob = "0.3"
which = "6.0"
octocrab = "0.32"
