[package]
name = "buildforge"
version = "1.0.0"
description = "Cross-platform build orchestration tool"
authors = ["yyyumeniku"]
license = "MIT"
repository = "https://github.com/yyyumeniku/BuildForge"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "shell-open", "shell-open-api", "dialog-all", "fs-all", "path-all", "notification-all", "window-all", "protocol-asset", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4"] }
notify-rust = "4"
anyhow = "1.0"
thiserror = "1.0"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
